frontpage overflow fix

--- a/app/themes/waterboys/styles/bundle.css
+++ b/app/themes/waterboys/styles/bundle.css
@@ -842,7 +842,7 @@ Example showing how to change the color/size of the icons:
 }
 
 .wb__home-content {
-  position: absolute;
+  position: relative;
   text-align: center;
   top: 50%;
   left: 50%;
@@ -852,7 +852,6 @@ Example showing how to change the color/size of the icons:
   color: #fff;
   padding: 0 15px;
   z-index: 3;
-
 }
 
 .wb__home-content img {
@@ -1418,7 +1417,7 @@ Example showing how to change the color/size of the icons:
   font-family: 'liberatorheavy', sans-serif;
   color: #fff;
   margin-top: 0;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
